<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/ThemeReceita"
    tools:context=".ReceitaActivity">

    <LinearLayout
        android:id="@+id/activityreceitaresumo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/ReceitaPrimary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:textColorHint="#FFFFFF"
            app:hintTextColor="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activityreceitavalor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/ReceitaPrimary"
                android:gravity="right|center_vertical"
                android:hint="@string/tela_receitavalor"
                android:inputType="numberDecimal"
                android:textColor="#FFFFFF"
                android:textColorHint="#FCFCFC"
                android:textSize="30sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityreceitaresumo">

        <TextView
            android:id="@+id/activityreceitadata"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/tela_receitadata"
            android:textSize="18sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/ReceitaPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/tela_receitacategoria"
            android:textColorHint="#000000"
            app:hintTextColor="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activityreceitacategoria"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_unit_24dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ReceitaPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/tela_receitadescricao"
            android:textColorHint="#000000"
            app:hintTextColor="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activityreceitadescricao"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_unit_24dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ReceitaPrimary" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabsalvarreceita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/ReceitaAccent"
        android:clickable="true"
        android:foregroundGravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_check" />

</androidx.constraintlayout.widget.ConstraintLayout>