<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activity.CadastroActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/tela_cadastro"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/ic_identity_24dp"
        android:drawableRight="@drawable/ic_unit_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="Nome"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#D5D6D7"
        app:layout_constraintEnd_toStartOf="@+id/editSobrenome"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editSobrenome"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/ic_identity_24dp"
        android:drawableRight="@drawable/ic_unit_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="Sobrenome"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#D5D6D7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editNome"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editEmailLogin"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/ic_email_24dp"
        android:drawableRight="@drawable/ic_unit_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#D5D6D7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNome" />

    <EditText
        android:id="@+id/editSenhaLogin"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/ic_lock_24dp"
        android:drawableRight="@drawable/ic_unit_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="Senha"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#D5D6D7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmailLogin" />

    <Button
        android:id="@+id/btnCadastro"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="#244BACE7"
        android:text="@string/tela_cadastrobtn"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSenhaLogin" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tela_cadastrotext"
        android:textColor="#8B8888"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastro" />
</androidx.constraintlayout.widget.ConstraintLayout>